fix pre color in dark mode

--- a/inst/bs4Dash-2.0.0/bs4Dash.css
+++ b/inst/bs4Dash-2.0.0/bs4Dash.css
@@ -193,3 +193,8 @@
 .dark-mode .selectize-control.single .selectize-input.dropdown-active:after {
   border-color: transparent transparent #fff transparent;
 }
+
+/* Fix verbatimTextOutput in dark mode */
+.dark-mode pre {
+  color: #fff;
+}
